buildworld: Really support static toolchain.
Not to be used for day-to-day stuff, testing and experimenting feature only.
This includes the cross-tools and would come very helpful when we will make
a switch for /libexec/ld-elf.so runtime linker.

--- a/gnu/usr.bin/binutils225/block2/ld/Makefile
+++ b/gnu/usr.bin/binutils225/block2/ld/Makefile
@@ -44,7 +44,9 @@ CFLAGS+=	-DENABLE_PLUGINS -DHAVE_CONFIG_H
 CFLAGS+=	-DTARGET_SYSTEM_ROOT=\"${USRDATA_PREFIX}\"
 # link-time optimization requires dlopen() which means ld cannot be built
 # statically and also support -plugin, not even for cross-tools.
+.if !defined(REALLY_NOSHARED)
 .undef NOSHARED
+.endif
 
 ldemul.c: ldemul-list.h
 
