--- a/gnu/usr.bin/binutils225/block2/nm/Makefile
+++ b/gnu/usr.bin/binutils225/block2/nm/Makefile
@@ -11,7 +11,9 @@ LDADD=	${STD_LDADD} -lz
 
 # link-time optimization requires dlopen() which means nm cannot be built
 # statically and also support -plugin, not even for cross-tools.
+.if !defined(REALLY_NOSHARED)
 .undef NOSHARED
+.endif
 
 ${MFILE}: ${SRCDIR}/binutils/doc/nm.1
 	cp ${.ALLSRC} ${.TARGET}
