--- a/gnu/usr.bin/cc47/cc_prep/Makefile
+++ b/gnu/usr.bin/cc47/cc_prep/Makefile
@@ -64,6 +64,10 @@ tm.h:
 	echo '#ifndef GCC_TM_H'				> ${.TARGET}
 	echo '#define GCC_TM_H'				>> ${.TARGET}
 	echo '#ifdef IN_GCC'				>> ${.TARGET}
+.if defined(REALLY_NOSHARED)
+	echo '#undef HAVE_LTO_PLUGIN'			>> ${.TARGET}
+	echo '#define HAVE_LTO_PLUGIN 0'		>> ${.TARGET}
+.endif
 .for H in ${TARGET_INC}
 	echo '# include "$H"'				>> ${.TARGET}
 .endfor
