--- a/gnu/usr.bin/binutils227/block2/ranlib/Makefile
+++ b/gnu/usr.bin/binutils227/block2/ranlib/Makefile
@@ -16,7 +16,9 @@ CFLAGS+=	-I${SRCDIR}/binutils \
 
 # link-time optimization requires dlopen() which means ranlib cannot be built
 # statically and also support -plugin, not even for cross-tools.
+.if !defined(REALLY_NOSHARED)
 .undef NOSHARED
+.endif
 
 ${MFILE}: ${SRCDIR}/binutils/doc/ranlib.1
 	cp ${.ALLSRC} ${.TARGET}
