--- a/sys/netproto/802_11/wlan/Makefile
+++ b/sys/netproto/802_11/wlan/Makefile
@@ -1,6 +1,5 @@
 KMOD	 = wlan
 SRCS	 = ieee80211.c ieee80211_action.c ieee80211_adhoc.c ieee80211_ageq.c
-#SRCS	+= ieee80211_amrr.c ieee80211_alq.c
 SRCS	+= ieee80211_crypto.c ieee80211_crypto_none.c ieee80211_ddb.c
 SRCS	+= ieee80211_dfs.c ieee80211_dragonfly.c ieee80211_hostap.c
 SRCS	+= ieee80211_ht.c ieee80211_hwmp.c ieee80211_input.c ieee80211_ioctl.c
@@ -8,7 +7,7 @@ SRCS	+= ieee80211_mesh.c ieee80211_monitor.c ieee80211_node.c
 SRCS	+= ieee80211_output.c ieee80211_phy.c ieee80211_power.c
 SRCS	+= ieee80211_proto.c ieee80211_radiotap.c
 SRCS	+= ieee80211_ratectl.c ieee80211_ratectl_none.c
-SRCS	+= ieee80211_regdomain.c ieee80211_rssadapt.c
+SRCS	+= ieee80211_regdomain.c
 SRCS	+= ieee80211_scan.c ieee80211_scan_sta.c  ieee80211_scan_sw.c
 SRCS	+= ieee80211_sta.c ieee80211_superg.c ieee80211_tdma.c
 SRCS	+= ieee80211_wds.c
