cvs: Fix perl shebangs in contrib scripts.

--- a/gnu/usr.bin/cvs/contrib/Makefile
+++ b/gnu/usr.bin/cvs/contrib/Makefile
@@ -16,7 +16,7 @@ FILES=	 README cvshelp.man descend.man intro.doc
 EXAMPDIR=	${SHAREDIR}/examples/cvs
 FILESDIR=	${EXAMPDIR}/contrib
 SCRIPTSDIR=	${FILESDIR}
-PERLPATH=	/usr/bin/perl
+PERLPATH=	/usr/bin/env perl
 CLEANFILES+=	$(SCRIPTS)
 
 .SUFFIXES: .sh .pl .in
