Cleanup leftover libs.
On one of my test setups these were sitting since 2016-03-10.

Reported-by: swildner

--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3137,6 +3137,8 @@ TO_REMOVE+=/boot/kernel/if_vx.ko
 TO_REMOVE+=/usr/share/examples/perfmon
 TO_REMOVE+=/usr/lib/libkiconv.so.3
 TO_REMOVE+=/usr/share/zoneinfo/Asia/Rangoon
+TO_REMOVE+=/lib/priv/libprivate_ncurses.so.59
+TO_REMOVE+=/lib/priv/libprivate_ncursesw.so.59
 TO_REMOVE+=/usr/lib/libprivate_panel.a
 TO_REMOVE+=/usr/lib/libprivate_panel.so
 TO_REMOVE+=/usr/lib/libprivate_panel.so.59
