ix: Sync with Intel's ix-3.2.17.
- Add several new chips.
- Add software workaround for 82598 errata #26.

--- a/sys/dev/netif/ix/Makefile
+++ b/sys/dev/netif/ix/Makefile
@@ -3,7 +3,8 @@ SRCS	= if_ix.c
 SRCS	+= device_if.h bus_if.h pci_if.h
 SRCS	+= opt_ix.h opt_ifpoll.h
 
-SRCS	+= ixgbe_common.c ixgbe_api.c ixgbe_phy.c ixgbe_vf.c ixgbe_mbx.c
+SRCS	+= ixgbe_common.c ixgbe_api.c ixgbe_phy.c ixgbe_mbx.c
+SRCS	+= ixgbe_osdep_pf.c
 SRCS	+= ixgbe_dcb.c ixgbe_dcb_82598.c ixgbe_dcb_82599.c
 SRCS	+= ixgbe_82598.c ixgbe_82599.c ixgbe_x540.c ixgbe_x550.c
 
