games: Move out non (6) utilities from /usr/games/.
The strfile(8) and unstr(8) are pretty generic on their own and do not belong
in /usr/games/ (with all NO_GAMES stuff). All (6) utilities are still in games.

 * Move stfile(8) and unstr(8) to usr.bin/.
 * Move out strfile from btools and convert it to hostprog (like nvi).
 * Compile strfile.nx only if NO_SHARE is not set.

While there, apply 3rd to usr.bin/vi too (somehow skipped it in bf31779ebd).

--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -847,16 +847,13 @@ installmost:
 # rpcgen:	old rpcgen used a hardwired cpp path, newer OBJFORMAT_PATH
 #		envs are not compatible with older objformat binaries.
 #
-.if exists(${.CURDIR}/games) && !defined(NO_GAMES)
-_strfile=	games/fortune/strfile
-.endif
 
 # BSTRAPDIRS1 - must be built in strict order, no parallelism
 #
 # order is very important. yacc before m4 before flex.  flex exec's m4,
 # m4's parser file needs the latest byacc (insanity!).
 #
-BSTRAPDIRS1= ${_strfile} \
+BSTRAPDIRS1= \
 	usr.bin/patch \
 	bin/chmod bin/cp bin/cpdup bin/dd bin/mkdir bin/rm bin/echo \
 	bin/test bin/cat bin/ln bin/mv bin/csh bin/expr bin/sh \
