--- a/games/fortune/Makefile
+++ b/games/fortune/Makefile
@@ -1,8 +1,8 @@
 #	@(#)Makefile	8.1 (Berkeley) 5/31/93
 
-SUBDIR= fortune strfile unstr
+SUBDIR= fortune
 .if !defined(NO_SHARE)
-SUBDIR+= datfiles
+SUBDIR+= strfile datfiles
 .endif
 
 .include <bsd.subdir.mk>
