--- a/games/fortune/strfile/Makefile
+++ b/games/fortune/strfile/Makefile
@@ -1,9 +1,9 @@
-#	@(#)Makefile	8.1 (Berkeley) 5/31/93
-# $FreeBSD: src/games/fortune/strfile/Makefile,v 1.2.8.1 2001/04/25 09:28:54 ru Exp $
+.PATH: ${.CURDIR}/../../../usr.bin/strfile
 
 PROG=	strfile
-MAN=	strfile.8
-MLINKS= strfile.8 unstr.8
+CFLAGS+=-I${.CURDIR}/../../../usr.bin/strfile
 
-.include "${.CURDIR}/../../Makefile.inc"
-.include <bsd.prog.mk>
+# this strfile is used in place, it is not installed anywhere
+install:
+
+.include <bsd.hostprog.mk>
