--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -707,7 +707,7 @@
             ..
         ..
         man
-/set uname=man 
+/set uname=man
             cat1
             ..
             cat2
@@ -726,6 +726,7 @@
             ..
             cat9
             ..
+/set uname=root
             man1
             ..
             man2
