mtree: Fix owner for several directories in /usr/share.
Only /usr/share/man/cat* directories should have owner 'man'.

0ba28897abadbf broke this by removing needed '/set uname=root' lines
in BSD.usr.dist.

While here, remove some trailing whitespace.

In-discussion-with: zrj

--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -711,7 +711,7 @@
             ..
         ..
         man
-/set uname=man 
+/set uname=man
             cat1
             ..
             cat2
@@ -730,6 +730,7 @@
             ..
             cat9
             ..
+/set uname=root
             man1
             ..
             man2
