--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3294,6 +3294,50 @@ TO_REMOVE+=/usr/share/man/man5/dm.conf.5.gz
 TO_REMOVE+=/usr/share/man/man8/dm.8.gz
 TO_REMOVE+=/usr/games/strfile
 TO_REMOVE+=/usr/games/unstr
+TO_REMOVE+=/usr/share/man/man1/CA.pl.1.gz
+TO_REMOVE+=/usr/share/man/man1/asn1parse.1.gz
+TO_REMOVE+=/usr/share/man/man1/c_rehash.1.gz
+TO_REMOVE+=/usr/share/man/man1/ca.1.gz
+TO_REMOVE+=/usr/share/man/man1/ciphers.1.gz
+TO_REMOVE+=/usr/share/man/man1/cms.1.gz
+TO_REMOVE+=/usr/share/man/man1/crl.1.gz
+TO_REMOVE+=/usr/share/man/man1/crl2pkcs7.1.gz
+TO_REMOVE+=/usr/share/man/man1/dgst.1.gz
+TO_REMOVE+=/usr/share/man/man1/dhparam.1.gz
+TO_REMOVE+=/usr/share/man/man1/dsa.1.gz
+TO_REMOVE+=/usr/share/man/man1/dsaparam.1.gz
+TO_REMOVE+=/usr/share/man/man1/ec.1.gz
+TO_REMOVE+=/usr/share/man/man1/ecparam.1.gz
+TO_REMOVE+=/usr/share/man/man1/enc.1.gz
+TO_REMOVE+=/usr/share/man/man1/errstr.1.gz
+TO_REMOVE+=/usr/share/man/man1/gendsa.1.gz
+TO_REMOVE+=/usr/share/man/man1/genpkey.1.gz
+TO_REMOVE+=/usr/share/man/man1/genrsa.1.gz
+TO_REMOVE+=/usr/share/man/man1/nseq.1.gz
+TO_REMOVE+=/usr/share/man/man1/ocsp.1.gz
+TO_REMOVE+=/usr/share/man/man1/pkcs12.1.gz
+TO_REMOVE+=/usr/share/man/man1/pkcs7.1.gz
+TO_REMOVE+=/usr/share/man/man1/pkcs8.1.gz
+TO_REMOVE+=/usr/share/man/man1/pkey.1.gz
+TO_REMOVE+=/usr/share/man/man1/pkeyparam.1.gz
+TO_REMOVE+=/usr/share/man/man1/pkeyutl.1.gz
+TO_REMOVE+=/usr/share/man/man1/rand.1.gz
+TO_REMOVE+=/usr/share/man/man1/req.1.gz
+TO_REMOVE+=/usr/share/man/man1/rsa.1.gz
+TO_REMOVE+=/usr/share/man/man1/rsautl.1.gz
+TO_REMOVE+=/usr/share/man/man1/s_client.1.gz
+TO_REMOVE+=/usr/share/man/man1/s_server.1.gz
+TO_REMOVE+=/usr/share/man/man1/s_time.1.gz
+TO_REMOVE+=/usr/share/man/man1/sess_id.1.gz
+TO_REMOVE+=/usr/share/man/man1/smime.1.gz
+TO_REMOVE+=/usr/share/man/man1/speed.1.gz
+TO_REMOVE+=/usr/share/man/man1/spkac.1.gz
+TO_REMOVE+=/usr/share/man/man1/ts.1.gz
+TO_REMOVE+=/usr/share/man/man1/tsget.1.gz
+TO_REMOVE+=/usr/share/man/man1/version.1.gz
+TO_REMOVE+=/usr/share/man/man1/x509.1.gz
+TO_REMOVE+=/usr/share/man/man5/config.5.gz
+TO_REMOVE+=/usr/share/man/man5/x509v3_config.5.gz
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
