--- a/lib/libncurses/libncursesw/Makefile
+++ b/lib/libncurses/libncursesw/Makefile
@@ -1,3 +1,7 @@
+# Build wide version of ncurses
+LIB=	private_ncursesw
+PRIVATELIB=
+
 ENABLE_WIDEC=	yes
 
 .include "${.CURDIR}/../libncurses/Makefile"
