ncurses: Separate generators and sources list.
Keeps everything concentrated outside libncurses lib.
Add a bit of source sorting too.

No functional change, just moving stuff around.

--- a/lib/libncurses/Makefile.inc
+++ b/lib/libncurses/Makefile.inc
@@ -5,7 +5,7 @@ VERSION_DEF=	${.CURDIR}/../Versions.def
 SYMBOL_MAPS=	${.CURDIR}/../Symbol.base.map
 TERMINFO_CAPS=  ${NCURSESDIR}/include/Caps
 
-.if defined (ENABLE_WIDEC)
+.if defined(ENABLE_WIDEC)
 CFLAGS+=	-D_XOPEN_SOURCE_EXTENDED
 CFLAGS+=	-DENABLE_WIDEC
 SW_WIDEC=	1
@@ -25,6 +25,12 @@ CFLAGS+=	-I${.OBJDIR}
 
 WARNS?=	5
 
+NCURSESBASEDIR=		${NCURSESDIR}/ncurses/base
+NCURSESSERIALDIR=	${NCURSESDIR}/ncurses/tty
+NCURSESTINFODIR=	${NCURSESDIR}/ncurses/tinfo
+NCURSESTRACEDIR=	${NCURSESDIR}/ncurses/trace
+NCURSESWIDEDIR=		${NCURSESDIR}/ncurses/widechar
+
 .PATH:	${NCURSESDIR}/include ${.CURDIR}/../include
 .if defined(ZPANEL)
 .PATH:	${NCURSESDIR}/panel
@@ -33,9 +39,9 @@ WARNS?=	5
 .PATH:	${NCURSESBASEDIR}
 .PATH:	${NCURSESSERIALDIR}
 .PATH:	${NCURSESTINFODIR}
-.PATH:	${NCURSESDIR}/ncurses/trace
+.PATH:	${NCURSESTRACEDIR}
 . if defined (ENABLE_WIDEC)
-.PATH:	${NCURSESDIR}/ncurses/widechar
+.PATH:	${NCURSESWIDEDIR}
 . endif
 .endif
 
