--- a/lib/libncurses/libncursesw/Makefile
+++ b/lib/libncurses/libncursesw/Makefile
@@ -2,6 +2,17 @@
 LIB=	private_ncursesw
 PRIVATELIB=
 
+SHLIBDIR?=	/lib
+
+ZNCURSES=	yes
+CFLAGS+=	-DTRACE
+CFLAGS+=	-DDRAGONFLY_NATIVE
+
+INCS=		${HEADERS} ${SRCHDRS}
+INCSDIR=	${INCLUDEDIR}/priv/ncurses
+INCSLINKS=	curses.h ${INCLUDEDIR}/priv/ncurses/ncurses.h
+
 ENABLE_WIDEC=	yes
 
-.include "${.CURDIR}/../libncurses/Makefile"
+.include "${.CURDIR}/../Makefile.sources"
+.include <bsd.lib.mk>
