--- a/lib/libncurses/libpanel/Makefile
+++ b/lib/libncurses/libpanel/Makefile
@@ -1,40 +1,13 @@
 # Build standard version of panel
-LIB?=	private_panel
+LIB=	private_panel
 PRIVATELIB=
 
 SHLIBDIR?=	/lib
 
-SRCS=	ncurses_def.h \
-	p_above.c \
-	p_below.c \
-	p_bottom.c \
-	p_delete.c \
-	p_hidden.c \
-	p_hide.c \
-	p_move.c \
-	p_new.c \
-	p_replace.c \
-	p_show.c \
-	p_top.c \
-	p_update.c \
-	p_user.c \
-	p_win.c
-
-# only when TRACE
-#SRCS+=	panel.c
-
-${SRCS:M*.c}: curses.h
-
-INCS=	panel.h
-
 ZPANEL=	yes
 
-.if defined(ENABLE_WIDEC)	# for term.h
-CFLAGS+=	-I${.OBJDIR}/../libncursesw
-.else
-CFLAGS+=	-I${.OBJDIR}/../libncurses
-.endif
+# XXX TODO privatize too
+INCS=	panel.h
 
-CLEANFILES=	ncurses_def.h curses.h curses.h.new
-
+.include "${.CURDIR}/../Makefile.sources"
 .include <bsd.lib.mk>
