--- a/lib/libncurses/libpanelw/Makefile
+++ b/lib/libncurses/libpanelw/Makefile
@@ -2,6 +2,11 @@
 LIB=	private_panelw
 PRIVATELIB=
 
+SHLIBDIR?=	/lib
+
+ZPANEL=	yes
+
 ENABLE_WIDEC=	yes
 
-.include "${.CURDIR}/../libpanel/Makefile"
+.include "${.CURDIR}/../Makefile.sources"
+.include <bsd.lib.mk>
