ncurses: Add hostprog variant of tic.
Tic(1) uses some of internal bits of ncurses implementation.
  * For now include a basic set of libncurses.
  * Link this tic with wide version of ncurses.
  * Adjust sources a bit for future reference.

--- a/lib/libncurses/Makefile
+++ b/lib/libncurses/Makefile
@@ -3,6 +3,12 @@ SUBDIR=	libncurses \
 	libncursesw \
 	libpanelw
 
+# only needed to build share/terminfo
+.if defined(NO_SHARE)
 SUBDIR_ORDERED=
+.else
+SUBDIR+=	libtic tic_next
+SUBDIR_ORDERED=	libtic tic_next
+.endif
 
 .include <bsd.subdir.mk>
