ncurses: Hook in fully bootstrapped tic_next.
This hopefully will allow for better future bootstraps better and w/o hacks.
Problem with tic(1) is his special knowledge through <progs.priv.h> header.
Because it is not a standard application (that uses only public headers) we
simply cannot expect to just compile three new main sources sources + link
with previously built libncurses.a from older release. Also, tic(1) during
buildworld builds terminfo binary database for the *new* ncurses lib version
and not for the *old* one. So full bootstrap is in order.

Note, share/terminfo database can still be built by a world installed tic(1).

--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -872,7 +872,7 @@ BSTRAPDIRS2= \
 	usr.bin/gencat usr.bin/chflags usr.bin/expand usr.bin/paste \
 	usr.bin/uuencode usr.bin/cap_mkdb usr.bin/true usr.bin/false \
 	usr.bin/cmp usr.bin/xargs usr.bin/id usr.bin/env usr.bin/dirname \
-	usr.bin/tail usr.bin/unifdef usr.bin/tic \
+	usr.bin/tail usr.bin/unifdef \
 	usr.sbin/chown usr.sbin/mtree usr.sbin/config \
 	usr.sbin/btxld usr.sbin/zic usr.sbin/makewhatis \
 	gnu/usr.bin/grep usr.bin/sort usr.bin/gzip usr.bin/bzip2 \
