--- a/usr.bin/tic/Makefile
+++ b/usr.bin/tic/Makefile
@@ -18,22 +18,10 @@ CFLAGS+=	-I${.OBJDIR}
 
 # Ideally this should be -lprivate_ncursesw
 # Wide version can be used when DragonFly 3.3 branch is created
-.if defined(BOOTSTRAPPING)
-.  if exists (/usr/lib/libncurses.a)
-DPADD=		/usr/lib/libncurses.a
-LDADD=		-lncurses
-.  else
-DPADD=		${LIBNCURSES}
-LDADD=		-lprivate_ncurses
-CFLAGS+=	-I${_SHLIBDIRPREFIX}/usr/include/priv/ncurses
-LDFLAGS+=	${PRIVATELIB_BLDFLAGS}
-.  endif
-.else
 DPADD=		${LIBNCURSES}
 LDADD=		-lprivate_ncurses
 CFLAGS+=	-I${_SHLIBDIRPREFIX}/usr/include/priv/ncurses
 LDFLAGS+=	${PRIVATELIB_LDFLAGS}
-.endif
 
 ncurses_def.h:
 	AWK=awk sh ${NCURSESDIR}/include/MKncurses_def.sh \
@@ -43,14 +31,9 @@ parametrized.h:
 	AWK=awk sh ${NCURSESDIR}/include/MKparametrized.sh \
 	  ${TERMINFO_CAPS} > ${.TARGET}
 
-# Hack: It's really termsort.c, but bootstrap stage chokes on it
-.if defined(BOOTSTRAPPING)
-_termsortc=	termsort.h
-.else
-_termsortc=	termsort.c
 beforedepend:	termsort.c
-.endif
-${_termsortc}:
+
+termsort.c:
 	sh ${PROGSDIR}/MKtermsort.sh awk ${TERMINFO_CAPS} > termsort.c
 
 tic.o: ${PROGSDIR}/tic.c
@@ -59,15 +42,12 @@ tic.o: ${PROGSDIR}/tic.c
 transform.o: ${PROGSDIR}/transform.c
 	${CC} ${CFLAGS} -c ${PROGSDIR}/transform.c -o ${.TARGET}
 
-dump_entry.o: ${PROGSDIR}/dump_entry.c ${_termsortc}
+dump_entry.o: ${PROGSDIR}/dump_entry.c termsort.c
 	${CC} ${CFLAGS} -c ${PROGSDIR}/dump_entry.c -o ${.TARGET}
 
 CLEANFILES=	ncurses_def.h parametrized.h termsort.c
 
 SRCS=	ncurses_def.h parametrized.h
-.if defined(BOOTSTRAPPING)
-SRCS+=	termsort.h
-.endif
 SRCS+=	tic.c dump_entry.c tparm_type.c transform.c
 
 .include <bsd.prog.mk>
