btools: Remove /bin/csh from the list.
Our buildworld infrastructure does not use it (/bin/sh is used).
The csh is quite a complicated shell (ncurses, crypto deps).
One place less to trip while upgrading to newer releases.
This should simplify all the private libs handling.

--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -856,7 +856,7 @@ installmost:
 BSTRAPDIRS1= \
 	usr.bin/patch \
 	bin/chmod bin/cp bin/cpdup bin/dd bin/mkdir bin/rm bin/echo \
-	bin/test bin/cat bin/ln bin/mv bin/csh bin/expr bin/sh \
+	bin/test bin/cat bin/ln bin/mv bin/expr bin/sh \
 	bin/hostname bin/kill \
 	usr.bin/yacc usr.bin/m4 usr.bin/localedef \
 	usr.bin/uudecode usr.bin/xinstall \
