ncurses: Privatize the last public header.
Just move it with rest of privatized ncurses headers. Only user in base is
usr.sbin/installer/dfuife_curses/ and include path is already handled there.
As of this moment we are sure that none of private ncurses bits are used for
bootstrapping the world (non-interactive make/shell scripts redirected to
file should not care about colors anyway or try to format the layout).

No functional change.

--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3348,6 +3348,7 @@ TO_REMOVE+=/usr/share/man/man1/version.1.gz
 TO_REMOVE+=/usr/share/man/man1/x509.1.gz
 TO_REMOVE+=/usr/share/man/man5/config.5.gz
 TO_REMOVE+=/usr/share/man/man5/x509v3_config.5.gz
+TO_REMOVE+=/usr/include/panel.h
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
