--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -875,7 +875,7 @@ BSTRAPDIRS2= \
 	usr.bin/tail usr.bin/unifdef \
 	usr.sbin/chown usr.sbin/mtree usr.sbin/config \
 	usr.sbin/btxld usr.sbin/zic usr.sbin/makewhatis \
-	gnu/usr.bin/grep usr.bin/sort usr.bin/gzip usr.bin/bzip2 \
+	gnu/usr.bin/grep usr.bin/sort usr.bin/gzip \
 	usr.bin/mkcsmapper usr.bin/mkesdb usr.bin/crunch
 
 bootstrap-tools: bootstrap-tools-before bootstrap-tools-targets1 bootstrap-tools-targets2
